--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "dependencies": {
+    "axios": "^0.27.2",
+    "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.0",
     "http": "^0.0.1-security",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.15",
     "woocommerce-api": "^1.5.0"
   },
