--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "http": "^0.0.1-security",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.15",
+    "openssl": "^2.0.0",
     "pg": "^8.7.3",
     "woocommerce-api": "^1.5.0"
   },
